<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dataEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="183dp"
        android:hint="@string/data_hint"
        app:layout_constraintBottom_toTopOf="@+id/createQrCodeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dataLabelTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dataLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:gravity="center"
        android:padding="@dimen/padding_4dp"
        android:text="@string/data"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dataEditTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dataEditTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sizeLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:gravity="center"
        android:padding="@dimen/padding_4dp"
        android:text="@string/size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sizeEditTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sizeEditTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sizeEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/size_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sizeLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/dataEditTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/colorLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:gravity="center"
        android:padding="@dimen/padding_4dp"
        android:text="@string/color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/colorEditTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/colorEditTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/colorEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/color_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/colorLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/sizeEditTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/formatLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:gravity="center"
        android:padding="@dimen/padding_4dp"
        android:text="@string/format"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/formatEditTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/formatEditTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/formatEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/format_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/formatLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/colorEditTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createQrCodeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/create_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formatEditTextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createQrCodeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>