<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

 <TextView
     android:id="@+id/headerTextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_16dp"
     android:text="@string/are_you_qr_header"
     android:textAlignment="center"
     android:textStyle="bold"
     android:textSize="@dimen/header_size"
     app:layout_constraintBottom_toTopOf="@+id/createButton"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <com.google.android.material.button.MaterialButton
     android:id="@+id/createButton"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/create_qr_code"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/readButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_qr_code"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createButton" />

</androidx.constraintlayout.widget.ConstraintLayout>