<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dataEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/data_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dataLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.16" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dataLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:gravity="center"
        android:padding="@dimen/padding_4dp"
        android:text="@string/data"
        android:textStyle="bold"
        app:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="@+id/dataEditTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dataEditTextView" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/colorLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:padding="@dimen/padding_4dp"
        android:text="@string/color"
        android:textStyle="bold"
        app:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="@+id/colorSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataEditTextView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/createQrCodeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/create_qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSpinner" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/colorSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/colorLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/dataEditTextView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds = "true"
            android:padding="4dp"
            app:contentDescription="@string/generated_qr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createQrCodeButton"
            tools:src="@tools:sample/avatars" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>